Working on sorting and rendering of projects as cards

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ title: Projects
 permalink: /projects/
 ---
 
-<div class="card border-info">
+<div class="card border-info mb-3">
     <div class="card-header text-white bg-info">
         Project List
     </div>
@@ -14,7 +14,7 @@ permalink: /projects/
         click on the links below to jump to the project.
     </div>
 </div>
-<div class="card">
+<div class="card mb-3">
     <div class="card-header">
         GitHub Projects
     </div>
@@ -22,142 +22,37 @@ permalink: /projects/
         <a href="/projects/github/bootstrap-modal">Bootstrap Modal</a> (Work in progress)
     </div>
 </div>
-<div class="card">
+<div class="card mb-3">
     <div class="card-header">
         DigiPen
     </div>
     <div class="card-body">
         <h2>Games</h2>
-        <div class="card-deck">
-            <div class="card">
-                    <img class="card-img-top" src="/img/projects/phobia/tile.png" />
+        {% assign projects_per_line = 2 %}
+        {% assign sorted_projects = (site.projects | sort: 'sort-order') %}
+        {% assign total_rows = sorted_projects | size | divided_by: projects_per_line %}
+        {% for i in (1..total_rows) %}
+        <div class="row">
+            {% for j in (1..projects_per_line) %}
+            {% assign x = j | minus: 1 %}
+            {% assign y = i | minus: 1 %}
+            {% assign tmp = projects_per_line | times: y %}
+            {% assign index = x | plus: tmp %}
+            {% assign project = sorted_projects[index] %}
+            <div class="col-sm-6">
+                <div class="card">
+                    <img class="card-img-top" src="{% if project.card.asset-folder %}/img/projects/{{ project.card.asset-folder }}/tile.png{% else %}https://placehold.it/600x300{% endif %}" />
                     <div class="card-body">
                         <h4 class="card-title">
-                            Phobia
-                            <small>You are a monster trying to scare people.
-                                <a href="/projects/games/phobia">View Project</a>.</small>
+                            {{ project.card.title }}
                         </h4>
-                    </div>
-            </div>
-            <div class="card">
-                <div class="thumbnail">
-                    <a href="/projects/games/sxkr2">
-                        <img class="img-responsive" src="/img/projects/sxkr2/tile.png">
-                    </a>
-                    <div class="caption">
-                        <h4>
-                            Super Xtreme Kart Racing 2
-                            <small>The most xtreme kart racing game ever!
-                                <a href="/projects/games/sxkr2">View Project</a>.</small>
-                        </h4>
+                        <p class="card-text">{{ project.card.short-description }}</p>
+                        <a href="{{ project.permalink }}" class="btn btn-info btn-block">View Project</a>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-        <div class="row">
-            <div class="col-lg-6 col-md-6">
-                <div class="thumbnail">
-                    <a href="#">
-                        <img class="img-responsive" src="/img/projects/wii/tile.png">
-                    </a>
-                    <div class="caption">
-                        <h4>
-                            Dealer Hero
-                            <small>Dealing cards simulator.
-                                <a href="#">View Project</a>.</small>
-                        </h4>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3">
-                <div class="thumbnail">
-                    <a href="#">
-                        <img class="img-responsive" src="http://placehold.it/600x300">
-                    </a>
-                    <div class="caption">
-                        <h4>
-                            DigiBoy
-                            <small>Coming soon.
-                                <a href="#">View Project</a>.</small>
-                        </h4>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3">
-                <div class="thumbnail">
-                    <a href="#">
-                        <img class="img-responsive" src="http://placehold.it/600x300">
-                    </a>
-                    <div class="caption">
-                        <h4>
-                            Defend the Rope
-                            <small>Coming soon.
-                                <a href="#">View Project</a>.</small>
-                        </h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <h2>Tools / Other</h2>
-        <div class="row">
-            <div class="col-lg-6 col-md-6">
-                <div class="thumbnail">
-                    <a href="#">
-                        <img class="img-responsive" src="http://placehold.it/600x300">
-                    </a>
-                    <div class="caption">
-                        <h4>
-                            Defend the Rope (Map Editor)
-                            <small>Coming soon.
-                                <a href="#">View Project</a>.</small>
-                        </h4>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6">
-                <div class="thumbnail">
-                    <a href="/projects/tools/sampling-profiler">
-                        <img class="img-responsive" src="/img/projects/profiler/tile.png">
-                    </a>
-                    <div class="caption">
-                        <h4>
-                            Sampling Profiler
-                            <small>Determine what function takes the most time.
-                                <a href="/projects/tools/sampling-profiler">View Project</a>.</small>
-                        </h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-6 col-md-6">
-                <div class="thumbnail">
-                    <a href="/projects/tools/curve-editor">
-                        <img class="img-responsive" src="/img/projects/curve/tile.png">
-                    </a>
-                    <div class="caption">
-                        <h4>
-                            Curve Editor
-                            <small>View different types of splines and curves.
-                                <a href="/projects/tools/curve-editor">View Project</a>.</small>
-                        </h4>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-6">
-                <div class="thumbnail">
-                    <a href="/projects/tools/software-rasterizer">
-                        <img class="img-responsive" src="/img/projects/rasterizer/tile.png">
-                    </a>
-                    <div class="caption">
-                        <h4>
-                            Software Rasterizer
-                            <small>3D software rasterizer just using SetPixel.
-                                <a href="/projects/tools/software-rasterizer">View Project</a>.</small>
-                        </h4>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% endfor %}
     </div>
 </div>
