--- a/_projects/games/dealer-hero.html
+++ b/_projects/games/dealer-hero.html
@@ -5,44 +5,42 @@ layout: project
 <h2>
     Dealer Hero (Wii)
 </h2>
-<div>
-    <p>
-        Dealer Hero was created using the Wii SDK for one of my classes in the Summer of 2009. The point of this game was to use
-        the Wii-mote motion control to flick the cards on the targets. This was my first game with console experience.
-    </p>
-    <h3>
-        Screenshots
-    </h3>
-    <p>
-    </p>
-    <div>
-        <a href="http://www.pcameron.com/images/projects/Wii/wii1.png">
-            <img src="http://www.pcameron.com/images/projects/Wii/wii1small.png" alt="Wii" class="image">
-        </a>
-        <a href="http://www.pcameron.com/images/projects/Wii/wii2.png">
-            <img src="http://www.pcameron.com/images/projects/Wii/wii2small.png" alt="Wii" class="image">
-        </a>
-        <a href="http://www.pcameron.com/images/projects/Wii/wii3.png">
-            <img src="http://www.pcameron.com/images/projects/Wii/wii3small.png" alt="Wii" class="image">
-        </a>
-        <a href="http://www.pcameron.com/images/projects/Wii/wii4.png">
-            <img src="http://www.pcameron.com/images/projects/Wii/wii4small.png" alt="Wii" class="image">
-        </a>
+<p>
+    Dealer Hero was created using the Wii SDK for one of my classes in the Summer of 2009. The point of this game was to use
+    the Wii-mote motion control to flick the cards on the targets. This was my first game with console experience.
+</p>
+<h3>
+    Screenshots
+</h3>
+<p>
+</p>
+<div class="row">
+    <div class="col-xs-6 col-md-3">
+        {% include img-thumbnail.html path="/img/projects/dealer-hero/wii1.png" %}
     </div>
-    <p>
-    </p>
-    <h3>
-        Code Samples
-    </h3>
-    <p>
-        Download code examples: Coming soon!
-    </p>
-    <p>
-    </p>
-    <h3>
-        Video
-    </h3>
-    <object type="application/x-shockwave-flash" style="width: 425px; height: 350px;" data="http://www.youtube.com/v/jINFtEgNxRQ&amp;hl=en&amp;fs=1">
-        <param name="movie" value="http://www.youtube.com/v/jINFtEgNxRQ&amp;hl=en&amp;fs=1">
-    </object>
+    <div class="col-xs-6 col-md-3">
+        {% include img-thumbnail.html path="/img/projects/dealer-hero/wii2.png" %}
+    </div>
+    <div class="col-xs-6 col-md-3">
+        {% include img-thumbnail.html path="/img/projects/dealer-hero/wii3.png" %}
+    </div>
+    <div class="col-xs-6 col-md-3">
+        {% include img-thumbnail.html path="/img/projects/dealer-hero/wii4.png" %}
+    </div>
 </div>
+<p>
+</p>
+<h3>
+    Code Samples
+</h3>
+<p>
+    Download code examples: Coming soon!
+</p>
+<p>
+</p>
+<h3>
+    Video
+</h3>
+<object type="application/x-shockwave-flash" style="width: 425px; height: 350px;" data="http://www.youtube.com/v/jINFtEgNxRQ&amp;hl=en&amp;fs=1">
+    <param name="movie" value="http://www.youtube.com/v/jINFtEgNxRQ&amp;hl=en&amp;fs=1">
+</object>
