--- a/_projects/games/dealer-hero.html
+++ b/_projects/games/dealer-hero.html
@@ -41,6 +41,7 @@ layout: project
 <h3>
     Video
 </h3>
-<object type="application/x-shockwave-flash" style="width: 425px; height: 350px;" data="http://www.youtube.com/v/jINFtEgNxRQ&amp;hl=en&amp;fs=1">
-    <param name="movie" value="http://www.youtube.com/v/jINFtEgNxRQ&amp;hl=en&amp;fs=1">
-</object>
+<div class="embed-responsive embed-responsive-16by9">
+    <iframe src="https://www.youtube.com/embed/jINFtEgNxRQ" allow="autoplay; encrypted-media" allowfullscreen width="960" height="720"
+        frameborder="0"></iframe>
+</div>
