Fixing youtube iframes, Added PWA, Added robots.txt

--- a/_projects/games/dealer-hero.html
+++ b/_projects/games/dealer-hero.html
@@ -42,6 +42,5 @@ layout: project
     Video
 </h3>
 <div class="embed-responsive embed-responsive-16by9">
-    <iframe src="https://www.youtube.com/embed/jINFtEgNxRQ" allow="autoplay; encrypted-media" allowfullscreen width="960" height="720"
-        frameborder="0"></iframe>
+    <iframe src="https://www.youtube.com/embed/jINFtEgNxRQ" allow="autoplay; encrypted-media" allowfullscreen width="960" height="720" frameborder="0"></iframe>
 </div>
