--- a/_projects/games/phobia.html
+++ b/_projects/games/phobia.html
@@ -65,7 +65,7 @@ layout: project
   </div>
 </div>
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe src="//www.youtube.com/embed/665GtJdrEm8?rel=0" allowfullscreen="" width="560" height="315" frameborder="0"></iframe>
+  <iframe src="https://www.youtube.com/embed/665GtJdrEm8" allow="autoplay; encrypted-media" allowfullscreen width="960" height="720" frameborder="0"></iframe>
 </div>
 
 <h3>Beta Release</h3>
@@ -92,7 +92,7 @@ layout: project
   </div>
 </div>
 <div class="embed-responsive embed-responsive-16by9">
-  <iframe src="//www.youtube.com/embed/cUBkJ57Y6zs?rel=0" allowfullscreen="" width="960" height="720" frameborder="0"></iframe>
+  <iframe src="https://www.youtube.com/embed/cUBkJ57Y6zs" allow="autoplay; encrypted-media" allowfullscreen width="960" height="720" frameborder="0"></iframe>
 </div>
 
 <h3>First Playable Release</h3>
